# Encore

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml
.claude/skills/: encore.md
design/: encore_schema_v0.1.json
src/encore/: __init__.py  cli.py  config.py  encore_schema_v0.1.json  schema.py  storage.py
src/encore/adapters/: __init__.py  base.py  feishu.py  github.py  local.py  notion.py
tests/: test_local_adapter.py  test_schema.py
